@@ -1,4 +1,5 @@
 [CW7]
+* SyncProxyAndroid SDK: Add displayCapabilities parameter to SetDisplayLayoutResponse class.
 + SyncProxyAndroid SDK: Add ImageFieldName enum, ImageField struct, ScreenParams struct. Update DisplayCapabilities struct.
 
 [CW6]
